package updated in package.html

--- a/src/main/java/de/alpharogroup/tree/ifaces/package.html
+++ b/src/main/java/de/alpharogroup/tree/ifaces/package.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-		net.sourceforce.jaulp.tree.ifaces
+		de.alpharogroup.tree.ifaces
     </title>
   </head>
   <body>
